--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,12 +31,15 @@ jobs:
           static_site_generator: next
 
       - name: Build with Next.js 🏗️
-        run: npx next build
+        run: |
+          npx next build
+          ls -al
+          ls -al ./out || echo "No out directory found"
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
-          path: out/
+          path: ./out
 
   deploy:
     environment:
